[metadata]
name = process_plot
version = attr: process_plot.__version__
description = Create plots of memory usage for a process.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrisjsewell/process-plot
author = Chris Sewell
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
keywords = memory,profiling

[options]
packages = process_plot
install_requires =
    click~=8.0
    matplotlib~=3.4
    pandas~=1.3
    psutil~=5.8
    pyyaml
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pplot = process_plot.cli:main

[options.extras_require]
tests =
    coverage
    pytest
    pytest-cov

[flake8]
max-line-length = 100
max-complexity = 15
extend-ignore = E203,E731
